[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemy3.gd" type="Script" id=1]
[ext_resource path="res://assets/vector_space.png" type="Texture" id=2]
[ext_resource path="res://scenes/reacteur_ennemi_big.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/NOOB++.png" type="Texture" id=4]
[ext_resource path="res://assets/NOOB++_damage.png" type="Texture" id=5]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/Sfx_Ennemi_Death.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 125.193
height = 180.164

[node name="Area2D" type="Area2D" groups=[
"Ennemis",
"Ennemi3",
]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="vector_space" type="Sprite" parent="."]
visible = false
position = Vector2( -60.943, -0.579102 )
texture = ExtResource( 2 )

[node name="reacteur" type="Node2D" parent="."]
position = Vector2( -56.25, 0 )

[node name="reacteur_ennemi2" parent="reacteur" instance=ExtResource( 3 )]
position = Vector2( -137.579, -81.8291 )
rotation = -1.5708
scale = Vector2( 0.5, 0.56 )

[node name="reacteur_ennemi" parent="reacteur" instance=ExtResource( 3 )]
position = Vector2( -188.28, 0 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )

[node name="reacteur_ennemi3" parent="reacteur" instance=ExtResource( 3 )]
position = Vector2( -137.5, 82 )
rotation = -1.5708
scale = Vector2( 0.5, 0.56 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.1044, 0 )
rotation = 1.5708
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="explosion" parent="." instance=ExtResource( 6 )]
scale = Vector2( 2, 2 )

[node name="timer_explosion" type="Timer" parent="."]
wait_time = 0.4

[node name="sound_death_ennemy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="canon2" type="Position2D" parent="."]
position = Vector2( 169.377, -88.5523 )

[node name="canon1" type="Position2D" parent="."]
position = Vector2( 255.916, 0 )

[node name="canon3" type="Position2D" parent="."]
position = Vector2( 168.737, 87.6029 )

[node name="TimerBullet" type="Timer" parent="."]
autostart = true

[node name="TimerInlvu" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerMissile" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="timer_explosion" to="." method="_on_timer_explosion_timeout"]
[connection signal="timeout" from="TimerBullet" to="." method="_on_TimerBullet_timeout"]
[connection signal="timeout" from="TimerInlvu" to="." method="_on_TimerInlvu_timeout"]
[connection signal="timeout" from="TimerMissile" to="." method="_on_TimerMissile_timeout"]
